# misis2024f-24-01-kuzmina-k-v

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
bin.dbg/: complex_test
prj.codeforces/: 0004a.cpp  0009c.cpp  0136a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0520b.cpp  0617a.cpp  0915a.cpp  0935b.cpp  0955b.cpp  0978a.cpp  1330a.cpp  135  1352a.cpp  1404a.cpp  1501a.cpp  1512C.cpp  1512b.cpp  1585a.cpp  1624a.cpp  1649a.cpp  1660b.cpp  1669a.cpp  1669b.cpp  1669c  1669c.cpp  1670b.cpp  1671a.cpp  1678a.cpp  1680b.cpp  1692a.cpp  1692c.cpp  1692d.cpp  1701a.cpp  1703a.cpp  1703b.cpp  1717B.cpp  1721b.cpp  1869a.cpp  (+12 more)
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: arrayd.cpp  arrayd.hpp
prj.lab/arrayt/: arrayt.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/queues/: CMakeLists.txt  queues.cpp  queues.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  complex_test.cpp  queues_test.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
