add_executable(0004a 0004a.cpp)
add_executable(0009c 0009c.cpp)
add_executable(0136a 0136a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0520b 0520b.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0915a 0915a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(0955b 0955b.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1355b 1355b.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1501a 1501a.cpp)
add_executable(1512b 1512b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1624a 1624a.cpp)
add_executable(1649a 1649a.cpp)
add_executable(1660b 1660b.cpp)
add_executable(1669a 1669a.cpp)
add_executable(1669b 1669b.cpp)
add_executable(1669c 1669c.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1678a 1678a.cpp)
add_executable(1680b 1680b.cpp)
add_executable(1692a 1692a.cpp)
add_executable(1692b 1692b.cpp)
add_executable(1692c 1692c.cpp)
add_executable(1692d 1692d.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1703a 1703a.cpp)
add_executable(1703b 1703b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1869a 1869a.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)

